# vulkanx

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  Rakefile
cmake/: vulkanxConfig.cmake.in
docs/: _config.yml  index.md
docs/_includes/: copy.html  head.html
docs/_layouts/: page.html
docs/doxygen/html/: DoxygenStyle.css  annotated.html  classes.html  dir_847beda83800adb203f85eb9ac7436b7.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions.html  functions_vars.html  graph_legend.html  group__buffer.html  group__command__buffer.html  group__descriptor__set.html  group__image.html  group__memory.html  group__result.html  group__setup.html  group__swapchain.html  index.html  menudata.js  modules.html  structVkxBuffer.html  structVkxBufferDataAccess.html  structVkxBufferDataAccess__.html  structVkxBufferGroup.html  structVkxBufferGroup__.html  structVkxBufferRegion.html  structVkxBuffer__.html  structVkxDescriptorSetGroup.html  structVkxDescriptorSetGroup__.html  structVkxDeviceMemoryView.html  structVkxDeviceMemoryView__.html  structVkxDynamicDescriptorPool.html  structVkxDynamicDescriptorPool__.html  structVkxDynamicDescriptorSet.html  structVkxDynamicDescriptorSet__.html  structVkxImage.html  structVkxImageDataAccess.html  structVkxImageDataAccess__.html  structVkxImageGroup.html  structVkxImageGroup__.html  structVkxImage__.html  (+4 more)
example/: gen_shaders.rb  main.c  shader.frag  shader.vert  shader_frag.inl  shader_vert.inl
include/: vulkanx.h  vulkanx_SDL.h
include/vulkanx/: buffer.h  command_buffer.h  descriptor_set.h  image.h  memory.h  pipeline.h  result.h  setup.h  shader.h  swapchain.h
src/: buffer.c  command_buffer.c  descriptor_set.c  image.c  memory.c  pipeline.c  result.c  setup.c  shader.c  swapchain.c  vulkanx_SDL.c
